--- a/frontend-utils/Cargo.toml
+++ b/frontend-utils/Cargo.toml
@@ -33,7 +33,7 @@ reqwest = { version = "0.12.11", default-features = false, features = [
     "http2",
     "macos-system-configuration",
 ] }
-tokio = { workspace = true, features = ["net"] }
+tokio = { workspace = true, features = ["net", "macros"] }
 cpal = { workspace = true, optional = true }
 bytemuck = { workspace = true, optional = true }
 
